# AI-Project-Bootstrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aiboot/: __init__.py  cli.py
docs/: WHY.md
my_ai_project/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
my_ai_project/demo/: run_demo.py
my_ai_project/scripts/: check_env.py
my_ai_project/src/my_ai_project/: __init__.py  main.py
