[project]
name = "aiboot"
version = "0.1.0"
description = "Minimal CLI to bootstrap reproducible AI/NLP projects."
authors = [{ name = "Rico Reinbacher" }, { name = "Julius Troegele" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]
[project.scripts]
aiboot = "aiboot.cli:main"

[project.urls]
Homepage = "https://github.com/1c0ns"
Repository = "https://github.com/1c0ns"

[tool.setuptools]
packages = ["aiboot"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
