[project]
name = "my_ai_project"
version = "0.1.0"
description = "Small reproducible AI/NLP starter."
authors = [{ name = "Rico Reinbacher" }, { name = "Julius Troegele" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "requests",
    "tqdm",
    "torch",
    "transformers",
    "sentence-transformers",
]

[project.urls]
Homepage = "https://github.com/1c0ns/AI-Project-Bootstrapper"
Repository = "https://github.com/1c0ns/AI-Project-Bootstrapper"

[tool.setuptools]
package-dir = { "": "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
